codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exec_approval_modal_exec.snap
---
source: tui/src/chatwidget/tests.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 12 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "  是否运行以下命令？                                                            ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " ")]
        "                                                                                ",
        "  原因：this is a test reason such as one that would be produced by the model   ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
        "                                                                                ",
        "  $ echo hello world                                                            ",
        "                                                                                ",
        "› 1. 是，继续 (y)                                                               ", // hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " ")]
        "  2. 否，并告诉 Codex 如何调整 (esc)                                            ", // hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " "), (14, " "), (23, " "), (25, " "), (27, " "), (29, " ")]
        "                                                                                ",
        "  按 enter 确认，按 esc 取消                                                    ", // hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " "), (25, " "), (27, " ")]
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 7, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 11, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 15, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 19, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 77, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 6, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 12, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 35, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 3, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 12, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 14, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 16, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 18, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 25, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
