codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_features_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  实 验 功 能
  切 换 实 验 功 能 ， 修 改 会 保 存 到  config.toml。

› [ ] Ghost snapshots  Capture undo snapshots each turn.
  [x] Shell tool       Allow the model to run shell commands.

  按  space 选 择 ， 按  enter 保 存 到 下 次 会 话
