codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  这 次 体 验 怎 么 样 ？

› 1. 问 题 /故 障   崩 溃 、 报 错 、 卡 死 ， 或 界 面 /行 为 异 常 。
  2. 结 果 不 佳    输 出 偏 题 、 错 误 、 不 完 整 ， 或 帮 助 不 大 。
  3. 结 果 良 好    结 果 有 帮 助 、 正 确 、 高 质 量 ， 或 体 验 很 棒 。
  4. 其 他        响 应 慢 、 功 能 建 议 、 体 验 反 馈 ， 或 其 他 问 题 。
